samples/_failures_safe/1761157690_4fe4ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb55d21b.c: In function ‘main’:
./samples/SAFE/__tmp_cb55d21b.c:158:28: error: missing terminating " character
  158 |                     printf("Error: Matrices must have same dimensions
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cb55d21b.c:158:21: error: expected expression at end of input
  158 |                     printf("Error: Matrices must have same dimensions
      |                     ^~~~~~
./samples/SAFE/__tmp_cb55d21b.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb55d21b.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb55d21b.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb55d21b.c:158:21: error: expected declaration or statement at end of input
